--- a/waterMe/src/app/home/home.component.html
+++ b/waterMe/src/app/home/home.component.html
@@ -1,12 +1,15 @@
-
-
-<!--
-<div class="container-fluid" style="padding: 0">
-  <div class="banner img-responsiv" style="background-image: url('../../assets/testPic.jpg'); height: 1000px;" ></div>
-</div>
--->
 <div class="bg">
-  <div class="container-fluid">
 
+  <ul class="nav justify-content-end">
+    <li class="nav-item">
+    <button type="button" class="btn btn-lg btn-success m-3" disabled>Pflanzen</button>
+    </li>
+  </ul>
+
+  <div class="container d-flex h-50">
+    <div class="row justify-content-center align-self-center">
+      <h1 style="font-size: 50px">Willkommen bei WaterMe!</h1>
+    </div>
   </div>
+
 </div>
