--- a/waterMe/src/app/DashboardComponent/dashboard.component.html
+++ b/waterMe/src/app/DashboardComponent/dashboard.component.html
@@ -1,10 +1,9 @@
 <head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.css" crossorigin="anonymous">
   <meta charset="utf-8">
   <title>WaterMe</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
 </head>
 
 <div class="container-fluid">
