--- a/waterMe/src/app/HomeComponent/home.component.html
+++ b/waterMe/src/app/HomeComponent/home.component.html
@@ -1,11 +1,13 @@
 <div class="bg">
 
+  <!-- navigation button top left -->
   <ul class="nav justify-content-end">
     <li class="nav-item">
     <a routerLink="/dashboard"><button class="button">Pflanzen</button> </a>
     </li>
   </ul>
 
+  <!-- header -->
   <div class="container d-flex h-50">
     <div class="row align-self-center">
       <h1>Willkommen bei WaterMe!</h1>
