--- a/waterMe/src/app/DashboardComponent/plants-listing/plants-listing.component.html
+++ b/waterMe/src/app/DashboardComponent/plants-listing/plants-listing.component.html
@@ -1,16 +1,25 @@
+<!-- overall container -->
 <div class="container-fluid co-overall" *ngFor="let plant of plants">
 
+  <!-- container for plant cards -->
   <div class="container-fluid">
+    <!-- overall row for each plant -->
     <div class="row">
+      <!-- column for picture-->
       <div class="col">
         <img src="{{plant.picture}}">
       </div>
+      <!-- column for data -->
       <div class="col-9">
         <h2 class="plants-h2">{{plant.name}}</h2>
+
+        <!-- row for "Flüssigkeit" -->
         <div class="row pt-3">
+          <!-- column for description -->
           <div class="col">
             <h6 class="plants-h6 ">Flüssigkeit:</h6>
           </div>
+          <!-- column for progressbar -->
           <div class="col-8">
             <div class="progress">
               <div class="progress-bar" role="progressbar" style="width: {{plant.wasserstand}}%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">{{plant.wasserstand}}%</div>
@@ -18,6 +27,7 @@
           </div>
         </div>
 
+        <!-- row for "Gegossen am:" -->
         <div class="row pt-3">
           <div class="col">
             <h6 class="plants-h6 ">Gegossen am:</h6>
@@ -27,6 +37,7 @@
           </div>
         </div>
 
+        <!-- row for "Gießen bis:" -->
         <div class="row pt-3">
           <div class="col">
             <h6 class="plants-h6 ">Gießen bis:</h6>
