--- a/waterMe/src/app/DashboardComponent/sidebar-component/sidebar-component.component.html
+++ b/waterMe/src/app/DashboardComponent/sidebar-component/sidebar-component.component.html
@@ -1,5 +1,9 @@
+
+<!-- Centered row for nav menu items -->
 <div class="row ml-5" style="height: 100vh">
+  <!-- vertical nav menu -->
   <ul class="nav flex-column align-self-center ml-5">
+    <!-- items -->
     <li class="nav-item"><a routerLink="#" class="navVert"><i class="bi bi-list-ul mr-2"></i>Pflanzen</a></li>
     <li class="nav-item mt-2"><a routerLink="" class="navVert"><i class="bi bi-house-door mr-2"></i>Home</a></li>
   </ul>
